--- a/work.html
+++ b/work.html
@@ -16,12 +16,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="shortcut icon" href="images/favicon.ico?crc=236454869"/>
   <title>work</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=124381206"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=344979210"/>
-  <link rel="stylesheet" type="text/css" href="css/work.css?crc=378205026" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3842126076"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=488282660"/>
+  <link rel="stylesheet" type="text/css" href="css/work.css?crc=3951334220" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_work.css?crc=408223675"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_work.css?crc=3990294502"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -53,15 +53,22 @@ transition:300ms;
      <a class="nonblock nontext clearfix grpelem" id="u7871-4" href="labs.html" data-href="page:U7893"><!-- content --><p id="u7871-2"><span class="Character-Style" id="u7871">LABS</span></p></a>
     </div>
     <a class="anchor_item colelem" id="top-work"></a>
-    <div class="clearfix colelem" id="pu26730"><!-- group -->
+    <div class="clearfix colelem" id="pu29357"><!-- group -->
+     <!-- m_editable region-id="editable-static-tag-U29357-BP_infinity" template="work.html" data-type="image" -->
+     <div class="clip_frame clearfix grpelem" id="u29357" data-muse-uid="U29357" data-muse-type="img_frame"><!-- image -->
+      <img class="position_content" id="u29357_img" src="images/pijika.gif?crc=77994269" alt="" width="515" height="285" data-muse-src="images/pijika.gif?crc=77994269"/>
+     </div>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U29345-BP_infinity" template="work.html" data-type="image" -->
+     <div class="clip_frame grpelem" id="u29345" data-muse-uid="U29345" data-muse-type="img_frame"><!-- image -->
+      <img class="block" id="u29345_img" src="images/screen%20shot%202017-11-16%20at%2050124%20pm.png?crc=453552672" alt="" width="320" height="526" data-muse-src="images/screen%20shot%202017-11-16%20at%2050124%20pm.png?crc=453552672"/>
+     </div>
+     <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U26730-BP_infinity" template="work.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
      <a class="nonblock nontext clip_frame grpelem" id="u26730" href="reel.html#reel2015" data-href="anchor:U2766:U20695" data-muse-uid="U26730" data-muse-type="img_frame"><!-- image --><img class="block" id="u26730_img" src="images/reel_button_web_new2015.png?crc=53870725" alt="" width="960" height="288" data-muse-src="images/reel_button_web_new2015.png?crc=53870725"/></a>
      <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U27210-BP_infinity" template="work.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext clip_frame clearfix grpelem" id="u27210" href="revoke.html" data-href="page:U558" data-muse-uid="U27210" data-muse-type="img_frame"><!-- image --><img class="position_content" id="u27210_img" src="images/revoke_thumb.gif?crc=3951008818" alt="" width="585" height="330" data-muse-src="images/revoke_thumb.gif?crc=3951008818"/></a>
-     <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U26690-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext rgba-background clearfix grpelem" id="u26690-9" href="revoke.html" data-href="page:U558" data-muse-uid="U26690" data-muse-type="txt_frame"><!-- content --><p id="u26690-2">Revoke : Singular</p><p id="u26690-4">Animation, Music Video</p><p id="u26690-5">&nbsp;</p><p id="u26690-6">&nbsp;</p><p id="u26690-7">&nbsp;</p></a>
+     <a class="nonblock nontext rgba-background clearfix grpelem" id="u26690-14" href="revoke.html" data-href="page:U558" data-muse-uid="U26690" data-muse-type="txt_frame"><!-- content --><p id="u26690">&nbsp;</p><p id="u26690-2">&nbsp;</p><p id="u26690-3">&nbsp;</p><p id="u26690-4">&nbsp;</p><p id="u26690-5">&nbsp;</p><p id="u26690-7">Revoke : Singular</p><p id="u26690-9">Animation, Music Video</p><p id="u26690-10">&nbsp;</p><p id="u26690-11">&nbsp;</p><p id="u26690-12">&nbsp;</p></a>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U26671-BP_infinity" template="work.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
      <a class="nonblock nontext clip_frame clearfix grpelem" id="u26671" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U26671" data-muse-type="img_frame"><!-- image --><img class="position_content" id="u26671_img" src="images/betweenspaces_printed_editedsm-4.jpg?crc=433621374" alt="" width="427" height="240" data-muse-src="images/betweenspaces_printed_editedsm-4.jpg?crc=433621374"/></a>
@@ -73,21 +80,16 @@ transition:300ms;
      <a class="nonblock nontext clip_frame grpelem" id="u26732" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U26732" data-muse-type="img_frame"><!-- image --><img class="block" id="u26732_img" src="images/funk_cover-crop-u26732.jpg?crc=3771023534" alt="" width="400" height="241" data-muse-src="images/funk_cover-crop-u26732.jpg?crc=3771023534"/></a>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U26717-BP_infinity" template="work.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext clip_frame grpelem" id="u26717" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U26717" data-muse-type="img_frame"><!-- image --><img class="block" id="u26717_img" src="images/tip_cover-crop-u26717.jpg?crc=4082276319" alt="" width="400" height="241" data-muse-src="images/tip_cover-crop-u26717.jpg?crc=4082276319"/></a>
+     <a class="nonblock nontext clip_frame grpelem" id="u26717" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U26717" data-muse-type="img_frame"><!-- image --><img class="block" id="u26717_img" src="images/tip_cover-crop-u26717.jpg?crc=489326867" alt="" width="400" height="241" data-muse-src="images/tip_cover-crop-u26717.jpg?crc=489326867"/></a>
      <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U26739" template="work.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-     <div class="pointer_cursor museBGSize clearfix grpelem" id="u26739" data-muse-uid="U26739"><!-- group -->
-      <a class="block" href="betweenspaces.html" data-href="page:U19544"><!-- Block link tag --></a>
-      <!-- m_editable region-id="editable-static-tag-U26744-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-      <a class="nonblock nontext rgba-background clearfix grpelem" id="u26744-6" href="lonelylego.html" data-href="page:U2196" data-muse-uid="U26744" data-muse-type="txt_frame"><!-- content --><p id="u26744-2">Rainbow : Lonely Lego</p><p id="u26744-4">Animation</p></a>
-      <!-- /m_editable -->
-     </div>
+     <!-- m_editable region-id="editable-static-tag-U26682-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext rgba-background clearfix grpelem" id="u26682-8" href="pijika.html" data-href="page:U3837" data-muse-uid="U26682" data-muse-type="txt_frame"><!-- content --><p id="u26682">&nbsp;</p><p id="u26682-2">&nbsp;</p><p id="u26682-4">Pijika : Just A Little Bit</p><p id="u26682-6">Cel animation, Music Video</p></a>
      <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U26725" template="work.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-     <div class="pointer_cursor museBGSize rgba-background clearfix grpelem" id="u26725" data-muse-uid="U26725"><!-- group -->
+     <!-- m_editable region-id="editable-static-tag-U26716" template="work.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+     <div class="pointer_cursor museBGSize clearfix grpelem" id="u26716" data-muse-uid="U26716"><!-- group -->
       <a class="block" href="betweenspaces.html" data-href="page:U19544"><!-- Block link tag --></a>
-      <!-- m_editable region-id="editable-static-tag-U26682-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-      <a class="nonblock nontext rgba-background clearfix grpelem" id="u26682-6" href="pijika.html" data-href="page:U3837" data-muse-uid="U26682" data-muse-type="txt_frame"><!-- content --><p id="u26682-2">Pijika : Just A Little Bit</p><p id="u26682-4">Cel animation, Music Video</p></a>
+      <!-- m_editable region-id="editable-static-tag-U26724-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+      <a class="nonblock nontext rgba-background clearfix grpelem" id="u26724-9" href="scrubbkid.html" data-href="page:U2057" data-muse-uid="U26724" data-muse-type="txt_frame"><!-- content --><p id="u26724-2">Kid : Scrubb</p><p id="u26724-4">Cel animation, Music Video</p><p id="u26724-5">&nbsp;</p><p id="u26724-6">&nbsp;</p><p id="u26724-7">&nbsp;</p></a>
       <!-- /m_editable -->
      </div>
      <!-- /m_editable -->
@@ -106,7 +108,12 @@ transition:300ms;
     </div>
     <div class="clearfix colelem" id="pu26696"><!-- group -->
      <!-- m_editable region-id="editable-static-tag-U26696" template="work.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext museBGSize grpelem" id="u26696" href="reel.html#reel2013" data-href="anchor:U2766:U13168" data-muse-uid="U26696"><!-- simple frame --></a>
+     <div class="pointer_cursor museBGSize clearfix grpelem" id="u26696" data-muse-uid="U26696"><!-- group -->
+      <a class="block" href="reel.html#reel2013" data-href="anchor:U2766:U13168"><!-- Block link tag --></a>
+      <!-- m_editable region-id="editable-static-tag-U26687-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+      <a class="nonblock nontext rgba-background clearfix grpelem" id="u26687-3" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U26687" data-muse-type="txt_frame"><!-- content --><p>&nbsp;</p></a>
+      <!-- /m_editable -->
+     </div>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U26712" template="work.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
      <div class="pointer_cursor museBGSize clearfix grpelem" id="u26712" data-muse-uid="U26712"><!-- group -->
@@ -116,11 +123,8 @@ transition:300ms;
       <!-- /m_editable -->
      </div>
      <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U26687-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext rgba-background clearfix grpelem" id="u26687-3" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U26687" data-muse-type="txt_frame"><!-- content --><p>&nbsp;</p></a>
-     <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U26709-BP_infinity" template="work.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext clip_frame grpelem" id="u26709" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U26709" data-muse-type="img_frame"><!-- image --><img class="block" id="u26709_img" src="images/thumb_medleyscrubb.gif?crc=313511835" alt="" width="320" height="180" data-muse-src="images/thumb_medleyscrubb.gif?crc=313511835"/></a>
+     <a class="nonblock nontext clip_frame clearfix grpelem" id="u26709" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U26709" data-muse-type="img_frame"><!-- image --><img class="position_content" id="u26709_img" src="images/thumb_medleyscrubb.gif?crc=313511835" alt="" width="313" height="176" data-muse-src="images/thumb_medleyscrubb.gif?crc=313511835"/></a>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U26726-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
      <a class="nonblock nontext rgba-background clearfix grpelem" id="u26726-6" href="scrubbmedley.html" data-href="page:U1820" data-muse-uid="U26726" data-muse-type="txt_frame"><!-- content --><p id="u26726-2">Medley : Scrubb</p><p id="u26726-4">Animation, Visual graphic</p></a>
@@ -147,6 +151,14 @@ transition:300ms;
      <!-- m_editable region-id="editable-static-tag-U26729-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
      <a class="nonblock nontext rgba-background clearfix grpelem" id="u26729-4" href="about.html" data-href="page:U2777" data-muse-uid="U26729" data-muse-type="txt_frame"><!-- content --><p>About</p></a>
      <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U26739" template="work.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+     <div class="pointer_cursor museBGSize clearfix grpelem" id="u26739" data-muse-uid="U26739"><!-- group -->
+      <a class="block" href="betweenspaces.html" data-href="page:U19544"><!-- Block link tag --></a>
+      <!-- m_editable region-id="editable-static-tag-U26744-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+      <a class="nonblock nontext rgba-background clearfix grpelem" id="u26744-6" href="lonelylego.html" data-href="page:U2196" data-muse-uid="U26744" data-muse-type="txt_frame"><!-- content --><p id="u26744-2">Rainbow : Lonely Lego</p><p id="u26744-4">Animation</p></a>
+      <!-- /m_editable -->
+     </div>
+     <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U26678" template="work.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
      <a class="nonblock nontext museBGSize grpelem" id="u26678" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U26678"><!-- simple frame --></a>
      <!-- /m_editable -->
@@ -162,7 +174,12 @@ transition:300ms;
      <a class="nonblock nontext museBGSize grpelem" id="u26695" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U26695"><!-- simple frame --></a>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U26708" template="work.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext museBGSize grpelem" id="u26708" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U26708"><!-- simple frame --></a>
+     <div class="pointer_cursor museBGSize clearfix grpelem" id="u26708" data-muse-uid="U26708"><!-- group -->
+      <a class="block" href="betweenspaces.html" data-href="page:U19544"><!-- Block link tag --></a>
+      <!-- m_editable region-id="editable-static-tag-U26738-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+      <a class="nonblock nontext rgba-background clearfix grpelem" id="u26738-7" href="grienday.html" data-href="page:U4241" data-muse-uid="U26738" data-muse-type="txt_frame"><!-- content --><p id="u26738-2">Stamp : Grien Day</p><p id="u26738-4">Illustration, Graphic Design</p><p id="u26738-5">&nbsp;</p></a>
+      <!-- /m_editable -->
+     </div>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U26740" template="work.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
      <div class="pointer_cursor museBGSize clearfix grpelem" id="u26740" data-muse-uid="U26740"><!-- group -->
@@ -175,19 +192,8 @@ transition:300ms;
      <!-- m_editable region-id="editable-static-tag-U26689-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
      <a class="nonblock nontext rgba-background clearfix grpelem" id="u26689-6" href="25hours.html" data-href="page:U1060" data-muse-uid="U26689" data-muse-type="txt_frame"><!-- content --><p id="u26689-2">25Hours : Colour in White</p><p id="u26689-4">Graphic Design</p></a>
      <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U26738-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext rgba-background clearfix grpelem" id="u26738-7" href="grienday.html" data-href="page:U4241" data-muse-uid="U26738" data-muse-type="txt_frame"><!-- content --><p id="u26738-2">Stamp : Grien Day</p><p id="u26738-4">Illustration, Graphic Design</p><p id="u26738-5">&nbsp;</p></a>
-     <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U26743-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
      <a class="nonblock nontext rgba-background clearfix grpelem" id="u26743-7" href="electricneonlamp.html" data-href="page:U4342" data-muse-uid="U26743" data-muse-type="txt_frame"><!-- content --><p id="u26743-2">Electric Neon Lamp</p><p id="u26743-4">Graphic Design, Logo</p><p id="u26743-5">&nbsp;</p></a>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U26716" template="work.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-     <div class="pointer_cursor museBGSize clearfix grpelem" id="u26716" data-muse-uid="U26716"><!-- group -->
-      <a class="block" href="betweenspaces.html" data-href="page:U19544"><!-- Block link tag --></a>
-      <!-- m_editable region-id="editable-static-tag-U26724-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-      <a class="nonblock nontext rgba-background clearfix grpelem" id="u26724-9" href="scrubbkid.html" data-href="page:U2057" data-muse-uid="U26724" data-muse-type="txt_frame"><!-- content --><p id="u26724-2">Kid : Scrubb</p><p id="u26724-4">Cel animation, Music Video</p><p id="u26724-5">&nbsp;</p><p id="u26724-6">&nbsp;</p><p id="u26724-7">&nbsp;</p></a>
-      <!-- /m_editable -->
-     </div>
      <!-- /m_editable -->
     </div>
     <div class="clearfix colelem" id="pu26633-4"><!-- group -->
@@ -203,7 +209,6 @@ transition:300ms;
    </div>
   </div>
   <div class="preload_images">
-   <img class="preload" src="images/thunbnail_pijika-u26725-r-fr.png?crc=3895664822" alt=""/>
    <img class="preload" src="images/screenshot%202013-12-15%20032653.jpg?crc=4081977437" alt=""/>
   </div>
   <!-- Other scripts -->
