--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3842126076"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=456776089"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3870467023" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=106415023"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=75315126" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?crc=4233243590"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?crc=3956487097"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -51,8 +51,24 @@ transition:300ms;
     <a class="nonblock nontext clearfix grpelem" id="u7871-4" href="labs.html" data-href="page:U7893"><!-- content --><p id="u7871-2"><span class="Character-Style" id="u7871">LABS</span></p></a>
    </div>
    <img class="colelem" id="u15353-4" alt="Hello, I'm Nitcha or Fame, multidisciplinary artist and designer. Welcome to my website. " width="680" height="67" src="images/u15353-4.png?crc=3841458815" data-IBE-flags="txtStyleSrc"/><!-- rasterized frame -->
-   <div class="clearfix colelem" id="ptop_projectpage"><!-- group -->
+   <div class="clearfix colelem" id="ppu27263"><!-- group -->
+    <div class="clearfix grpelem" id="pu27263"><!-- group -->
+     <!-- m_editable region-id="editable-static-tag-U27263-BP_infinity" template="index.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext clip_frame clearfix grpelem" id="u27263" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U27263" data-muse-type="img_frame"><!-- image --><img class="position_content" id="u27263_img" src="images/8_attamatic_textneck3_27663682693_o.jpg?crc=3890889582" alt="" width="474" height="265" data-muse-src="images/8_attamatic_textneck3_27663682693_o.jpg?crc=3890889582"/></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U27266-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext rgba-background clearfix grpelem" id="u27266-13" href="attamatic.html#textneck_short" data-href="anchor:U14827:U19412" data-muse-uid="U27266" data-muse-type="txt_frame"><!-- content --><p id="u27266-2">Text-Neck</p><p id="u27266-4">Wearable Technology, Physical Computing,</p><p id="u27266-6">Research</p><p id="u27266-7">&nbsp;</p><p id="u27266-8">&nbsp;</p><p id="u27266-9">&nbsp;</p><p id="u27266-11">Part of Atta-matic: Mind the Body series</p></a>
+     <!-- /m_editable -->
+    </div>
     <a class="anchor_item grpelem" id="top_projectpage"></a>
+    <!-- m_editable region-id="editable-static-tag-U27261-BP_infinity" template="index.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext clip_frame grpelem" id="u27261" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U27261" data-muse-type="img_frame"><!-- image --><img class="block" id="u27261_img" src="images/sfpc%20showcase_13-crop-u27261.jpg?crc=4058234968" alt="" width="400" height="240" data-muse-src="images/sfpc%20showcase_13-crop-u27261.jpg?crc=4058234968"/></a>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U27265-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext rgba-background clearfix grpelem" id="u27265-6" href="remembering.html" data-href="page:U27086" data-muse-uid="U27265" data-muse-type="txt_frame"><!-- content --><p id="u27265-2">Remembering</p><p id="u27265-4">Physical Computing, Installation</p></a>
+    <!-- /m_editable -->
+   </div>
+   <div class="clearfix colelem" id="pu27247"><!-- group -->
     <!-- m_editable region-id="editable-static-tag-U27247" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
     <div class="pointer_cursor museBGSize clearfix grpelem" id="u27247" data-muse-uid="U27247"><!-- group -->
      <a class="block" href="betweenspaces.html" data-href="page:U19544"><!-- Block link tag --></a>
@@ -69,23 +85,6 @@ transition:300ms;
      <!-- /m_editable -->
     </div>
     <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U27261-BP_infinity" template="index.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext clip_frame grpelem" id="u27261" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U27261" data-muse-type="img_frame"><!-- image --><img class="block" id="u27261_img" src="images/sfpc%20showcase_13-crop-u27261.jpg?crc=4058234968" alt="" width="400" height="240" data-muse-src="images/sfpc%20showcase_13-crop-u27261.jpg?crc=4058234968"/></a>
-    <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U27263-BP_infinity" template="index.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext clip_frame clearfix grpelem" id="u27263" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U27263" data-muse-type="img_frame"><!-- image --><img class="position_content" id="u27263_img" src="images/8_attamatic_textneck3_27663682693_o.jpg?crc=3890889582" alt="" width="474" height="265" data-muse-src="images/8_attamatic_textneck3_27663682693_o.jpg?crc=3890889582"/></a>
-    <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U27265-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext rgba-background clearfix grpelem" id="u27265-6" href="remembering.html" data-href="page:U27086" data-muse-uid="U27265" data-muse-type="txt_frame"><!-- content --><p id="u27265-2">Remembering</p><p id="u27265-4">Physical Computing, Installation</p></a>
-    <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U27266-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext rgba-background clearfix grpelem" id="u27266-13" href="attamatic.html#textneck_short" data-href="anchor:U14827:U19412" data-muse-uid="U27266" data-muse-type="txt_frame"><!-- content --><p id="u27266-2">Text-Neck</p><p id="u27266-4">Wearable Technology, Physical Computing,</p><p id="u27266-6">Research</p><p id="u27266-7">&nbsp;</p><p id="u27266-8">&nbsp;</p><p id="u27266-9">&nbsp;</p><p id="u27266-11">Part of Atta-matic: Mind the Body series</p></a>
-    <!-- /m_editable -->
-    <div class="grpelem" id="u28729"><!-- custom html -->
-     div {
-    cursor:cell;
-}
-    </div>
    </div>
    <div class="clearfix colelem" id="pu27246"><!-- group -->
     <!-- m_editable region-id="editable-static-tag-U27246" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
