--- a/betweenspaces.html
+++ b/betweenspaces.html
@@ -10,22 +10,22 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "require.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "betweenspaces.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "require.js", "betweenspaces.css"], "outOfDate":[]};
 </script>
   
   <link rel="shortcut icon" href="images/favicon.ico?crc=236454869"/>
   <title>betweenspaces</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3842126076"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=456776089"/>
-  <link rel="stylesheet" type="text/css" href="css/betweenspaces.css?crc=44720345" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=106415023"/>
+  <link rel="stylesheet" type="text/css" href="css/betweenspaces.css?crc=4139950211" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/quicksand:n4:all.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/ik/QIYfe9rAYXYNX0DcZwv_d_neWxP9htMPcBWmcEKgfttfeTSgf5EUhbjPHQIXw2baF2S3Wh4Kwebhjh9hjQBKFebaZQmqjAByFQmR5AJujcb35AFReKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJHdAN0iYF8S14yifGHfFPqMyMMeMw6MPGHfF5qMyMMeMX6MPG4f5BxIMMjgfMgP6sFiWF8qMYFqvYSgb.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/ixCYs7q_63hgdFiZ2E_9owZHDdEC61UpG_9BedO3EqbfeTSgf5EUhbjPHQIXw2baF2S3Wh4Kwebhjh9hjQBKFebaZQmqjAByFQmR5AJujcb35AFReKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJHdAN0iYF8S14yifGHfFPqMyMMeMw6MPGHfF5qMyMMeMX6MPG4f5BxIMMjgfMgP6sFiWF8qMeMqvVSgb.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
