--- a/project.html
+++ b/project.html
@@ -17,11 +17,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>project</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3842126076"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=456776089"/>
-  <link rel="stylesheet" type="text/css" href="css/project.css?crc=3917431883" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=106415023"/>
+  <link rel="stylesheet" type="text/css" href="css/project.css?crc=4098399901" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_project.css?crc=4095884848"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_project.css?crc=4072528679"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -52,18 +52,20 @@ transition:300ms;
      <a class="nonblock nontext clearfix grpelem" id="u7871-4" href="labs.html" data-href="page:U7893"><!-- content --><p id="u7871-2"><span class="Character-Style" id="u7871">LABS</span></p></a>
     </div>
     <a class="anchor_item colelem" id="top_projectpage"></a>
-    <div class="clearfix colelem" id="pu27152"><!-- group -->
+    <div class="clearfix colelem" id="ppu27172"><!-- group -->
+     <div class="clearfix grpelem" id="pu27172"><!-- group -->
+      <!-- m_editable region-id="editable-static-tag-U27172-BP_infinity" template="project.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
+      <a class="nonblock nontext clip_frame clearfix grpelem" id="u27172" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U27172" data-muse-type="img_frame"><!-- image --><img class="position_content" id="u27172_img" src="images/8_attamatic_textneck3_27663682693_o.jpg?crc=3890889582" alt="" width="474" height="265" data-muse-src="images/8_attamatic_textneck3_27663682693_o.jpg?crc=3890889582"/></a>
+      <!-- /m_editable -->
+      <!-- m_editable region-id="editable-static-tag-U27111-BP_infinity" template="project.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+      <a class="nonblock nontext rgba-background clearfix grpelem" id="u27111-13" href="attamatic.html#textneck_short" data-href="anchor:U14827:U19412" data-muse-uid="U27111" data-muse-type="txt_frame"><!-- content --><p id="u27111-2">Text-Neck</p><p id="u27111-4">Wearable Technology, Physical Computing,</p><p id="u27111-6">Research</p><p id="u27111-7">&nbsp;</p><p id="u27111-8">&nbsp;</p><p id="u27111-9">&nbsp;</p><p id="u27111-11">Part of Atta-matic: Mind the Body series</p></a>
+      <!-- /m_editable -->
+     </div>
      <!-- m_editable region-id="editable-static-tag-U27152-BP_infinity" template="project.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
      <a class="nonblock nontext clip_frame grpelem" id="u27152" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U27152" data-muse-type="img_frame"><!-- image --><img class="block" id="u27152_img" src="images/sfpc%20showcase_13-crop-u27152.jpg?crc=4058234968" alt="" width="400" height="240" data-muse-src="images/sfpc%20showcase_13-crop-u27152.jpg?crc=4058234968"/></a>
      <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U27172-BP_infinity" template="project.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext clip_frame clearfix grpelem" id="u27172" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U27172" data-muse-type="img_frame"><!-- image --><img class="position_content" id="u27172_img" src="images/8_attamatic_textneck3_27663682693_o.jpg?crc=3890889582" alt="" width="474" height="265" data-muse-src="images/8_attamatic_textneck3_27663682693_o.jpg?crc=3890889582"/></a>
-     <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U27117-BP_infinity" template="project.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
      <a class="nonblock nontext rgba-background clearfix grpelem" id="u27117-6" href="remembering.html" data-href="page:U27086" data-muse-uid="U27117" data-muse-type="txt_frame"><!-- content --><p id="u27117-2">Remembering</p><p id="u27117-4">Physical Computing, Installation</p></a>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U27111-BP_infinity" template="project.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext rgba-background clearfix grpelem" id="u27111-13" href="attamatic.html#textneck_short" data-href="anchor:U14827:U19412" data-muse-uid="U27111" data-muse-type="txt_frame"><!-- content --><p id="u27111-2">Text-Neck</p><p id="u27111-4">Wearable Technology, Physical Computing,</p><p id="u27111-6">Research</p><p id="u27111-7">&nbsp;</p><p id="u27111-8">&nbsp;</p><p id="u27111-9">&nbsp;</p><p id="u27111-11">Part of Atta-matic: Mind the Body series</p></a>
      <!-- /m_editable -->
     </div>
     <div class="clearfix colelem" id="pu26852"><!-- group -->
