--- a/revoke.html
+++ b/revoke.html
@@ -10,25 +10,26 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "require.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "revoke.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "require.js", "revoke.css"], "outOfDate":[]};
 </script>
   
   <link rel="shortcut icon" href="images/favicon.ico?crc=236454869"/>
   <title>Revoke</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=124381206"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=344979210"/>
-  <link rel="stylesheet" type="text/css" href="css/revoke.css?crc=3998175973" id="pagesheet"/>
-  <!-- IE-only CSS -->
-  <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_revoke.css?crc=413426243"/>
-  <![endif]-->
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3842126076"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=106415023"/>
+  <link rel="stylesheet" type="text/css" href="css/revoke.css?crc=166913074" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/quicksand:n4,i4,n3:all.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/quicksand:n4:all.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/wpxJ1oqq13KD-fjMo-ECdFBHp8eDSZknxoC2gjhNu-IfeTSgf5EUhbjPHQIXw2baF2S3Wh4Kwebhjh9hjQBKFebaZQmqjAByFQmR5AJujcb35AFReKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJHdAN0iYF8S14yifGHfFPqMyMMeMw6MPGHfF5qMyMMeMX6MPG4f5BxIMMjgfMgP6sFiWF8qMY_qCVSgb.js" type="text/javascript"></script>
+  <!-- Other scripts -->
+  <script type="text/javascript">
+   try {Typekit.load();} catch(e) {}
+</script>
     <!--custom head HTML-->
   <script src="http://isotope.metafizzy.co/beta/isotope.pkgd.min.js" type="text/javascript"></script>
  </head>
@@ -49,32 +50,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <a class="nonblock nontext clearfix grpelem" id="u153-4" href="reel.html" data-href="page:U2771"><!-- content --><p id="u153-2"><span class="Character-Style" id="u153">REEL</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u7871-4" href="labs.html" data-href="page:U7893"><!-- content --><p id="u7871-2"><span class="Character-Style" id="u7871">LABS</span></p></a>
     </div>
-    <div class="clearfix colelem" id="pu603-10"><!-- group -->
-     <!-- m_editable region-id="editable-static-tag-U603-BP_infinity" template="revoke.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <div class="clearfix grpelem" id="u603-10" data-muse-uid="U603" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-      <p id="u603-2"><span class="BoldMenuLink" id="u603">Revoke : Singular</span></p>
-      <p id="u603-4">Soaking digital prints and cel animation</p>
-      <p id="u603-6">Role : Director, Designer and Animator</p>
-      <p id="u603-8">2012</p>
-     </div>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U2788-BP_infinity" template="revoke.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <div class="clearfix grpelem" id="u2788-22" data-muse-uid="U2788" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-      <p id="u2788-2">Credits</p>
-      <p id="u2788-5"><span id="u2788-3">Designed and directed</span> - Nitcha Tothong, Yossiri Baisri</p>
-      <p id="u2788-8"><span id="u2788-6">Cel Animation</span> - Nitcha Tothong, Ise Ananphada</p>
-      <p id="u2788-11"><span id="u2788-9">Edited and Color Grading</span> - Yossiri Baisri</p>
-      <p id="u2788-14"><span id="u2788-12">Cast</span> - Chintnudda Lamakanond, Phatthi Buntawanit</p>
-      <p id="u2788-17"><span id="u2788-15">Special Thanks</span> - Koong, Juk, Jue</p>
-      <p id="u2788-20"><span id="u2788-18">Client</span> - Sony Music</p>
-     </div>
-     <!-- /m_editable -->
+    <div class="clearfix colelem" id="pu771"><!-- group -->
      <div class="grpelem" id="u771"><!-- custom html -->
       <iframe src="//player.vimeo.com/video/65386008" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
      </div>
-     <!-- m_editable region-id="editable-static-tag-U2795-BP_infinity" template="revoke.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <div class="clearfix grpelem" id="u2795-4" data-muse-uid="U2795" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-      <p>“Revoke” is an official music video for a track from an alternative metro acoustic band, Singular’s 2012 full album called ‘Spirit’. The music video is about relationship between two lovers and how they zen on awkwardness of their collapsing feelings. Their nostalgia for past moments they had together are represented by using an hourglass as metaphor. It reflects on the meaning of the lyric about the lovers’ longing to go back to the beginning. While water represent those blurry and fluidity dynamic of time in memory space: sink, flow, and fragmented.</p>
+     <!-- m_editable region-id="editable-static-tag-U2814-BP_infinity" template="revoke.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+     <div class="clearfix grpelem" id="u2814-4" data-muse-uid="U2814" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+      <p>Process</p>
      </div>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U12000-BP_infinity" template="revoke.html" data-type="image" -->
@@ -82,12 +64,23 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <img class="block" id="u12000_img" src="images/revoke_1_rca.jpg?crc=226299974" alt="" width="398" height="654" data-muse-src="images/revoke_1_rca.jpg?crc=226299974"/>
      </div>
      <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U29430-BP_infinity" template="revoke.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+     <div class="clearfix grpelem" id="u29430-25" data-muse-uid="U29430" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+      <p class="Project" id="u29430-2"><span class="BoldMenuLink" id="u29430">REVOKE–SINGULAR</span></p>
+      <p class="Project" id="u29430-5">2012 | <span id="u29430-4">Role : Co-Director, Animator</span></p>
+      <p class="Project" id="u29430-6">&nbsp;</p>
+      <p class="Project" id="u29430-8"><span id="u29430-7">“Revoke” is an official music video for a track from an alternative metro acoustic band, Singular’s 2012 full album called ‘Spirit’. The music video is about relationship between two lovers and how they zen on awkwardness of their collapsing feelings. Their nostalgia for past moments they had together are represented by using an hourglass as metaphor. It reflects on the meaning of the lyric about the lovers’ longing to go back to the beginning. While water represent those blurry and fluidity dynamic of time in memory space: sink, flow, and fragmented.</span></p>
+      <p class="Project" id="u29430-9">&nbsp;</p>
+      <p id="u29430-11">Credits</p>
+      <p id="u29430-13">Designed and directed: Nitcha Tothong, Yossiri Baisri</p>
+      <p id="u29430-15">Cel Animation: Nitcha Tothong, Ise Ananphada</p>
+      <p id="u29430-17">Edited and Color Grading: Yossiri Baisri</p>
+      <p id="u29430-19">Cast: Chintnudda Lamakanond, Phatthi Buntawanit</p>
+      <p id="u29430-21">Special Thanks: Koong, Juk, Jue</p>
+      <p id="u29430-23">Client: Sony Music</p>
+     </div>
+     <!-- /m_editable -->
     </div>
-    <!-- m_editable region-id="editable-static-tag-U2814-BP_infinity" template="revoke.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-    <div class="clearfix colelem" id="u2814-4" data-muse-uid="U2814" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-     <p>Process</p>
-    </div>
-    <!-- /m_editable -->
     <div class="SlideShowWidget clearfix colelem" id="slideshowu614"><!-- none box -->
      <div class="popup_anchor" data-col-pos="0" id="u626popup">
       <div class="SlideShowContentPanel clearfix" data-col-pos="0" id="u626"><!-- stack box -->
